fixed cart on mobile devices

--- a/src/components/header/header.style.css
+++ b/src/components/header/header.style.css
@@ -2,10 +2,13 @@
  display: flex;
  position: fixed;
  align-items: center;
- z-index: 2;
  justify-content: space-between;
+ z-index: 2;
  width: 100%;
  height: 70px;
+ top:0;
+ left:0;
+ right: 0;
  background-color: #76bdfe;
 box-shadow: 0px 0px 9px 10px rgba(41,41,41,.25);
 }
@@ -36,8 +39,5 @@ box-shadow: 0px 0px 9px 10px rgba(41,41,41,.25);
       }
       .cart-icon{
         padding: 5px;
-      }
-      .header{
-        position: relative;
       }
   }
